# TravelPal

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.frontend  LICENSE  Makefile  README.md  deploy.sh  docker-compose.yml  nginx.conf  opencode-relay.json  pyproject.toml  pytest.ini  serve.bat
.github/workflows/: ci.yml  deploy.yml  docs.yml
.obsidian/: app.json  appearance.json  community-plugins.json  core-plugins.json  webviewer.json
.opencode/: opencode.json
back/: config.py
back/api/: __init__.py  routes.py  server.py
back/data/: __init__.py  amap_loader.py
back/engine/: __init__.py  ca.py  clustering.py  pipeline.py  search.py  vns.py
backend/: config.py  typedefs.py
backend/agent/: __init__.py  chat.py  commentator.py  planner.py  tools.py
backend/api/: __init__.py  routes.py  schemas.py  server.py
backend/data/: __init__.py  amap_loader.py
backend/engine/: __init__.py  ca.py  clustering.py  fitness.py  pipeline.py  search.py  vns.py
backend/tools/: deprecated.py  gen_openapi.py  sync_all.py
backend/utils/: __init__.py  decorators.py  deprecated.py  gen_openapi.py  sync_all.py
docker/: Dockerfile.backend  Dockerfile.frontend
docs/: ADR-001.md  ADR-002.md  ADR-003.md  ci-pipeline.md  coding.md  coding_standards.md  conf.py  deploy.md  dev-env.md  git.md  index.rst  openapi.json  产品路线图.md  架构设计.md
docs/ADR/: 001.md  002.md  003.md  004.md  005.md  (+2 more)
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
src/: config.py
tests/: conftest.py  dataset_loader.py
(+68 files in other folders)
