[project]
name = "travelpal"
version = "0.1.0"
description = ""
authors = [
    {name = "xiaojiune",email = "3195675598@qq.com"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.138.0,<0.139.0)",
    "uvicorn[standard] (>=0.49.0,<0.50.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "numpy (>=2.0.0,<3.0.0)",
    "numba (>=0.65.0,<0.66.0)",
    "scikit-learn (>=1.5.0,<2.0.0)",
    "requests (>=2.32.0,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "streamlit (>=1.40.0,<2.0.0)",
    "openai (>=1.60.0,<2.0.0)",
    "chromadb (>=1.5.9,<2.0.0)",
    "redis (>=5.0.0,<6.0.0)",
    "jieba (>=0.42.0,<0.43.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.scripts]
dev = "backend.api.server:main"

[tool.poetry.group.dev.dependencies]
pytest = "^9.1.1"

[tool.poetry.group.docs.dependencies]
sphinx = "^9"
sphinx-rtd-theme = "^3"
sphinx-autoapi = "^3"
myst-parser = "^5"
sphinxcontrib-redoc = "^1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
